Rename 'mm' to 'month'
