# src/api/species/specie.controller.js
@@ -129,7 +129,7 @@ export async function read(req, res) {
             institutionCode: 1,
             url: 1,
             day: 1,
-            mm: 1,
+            month: 1,
             yyyy: 1,
             suggestedStateProvince: 1,
             suggestedCounty: 1,
@@ -197,7 +197,7 @@ export async function readValidForGroup(req, res) {
             institutionCode: 1,
             url: 1,
             day: 1,
-            mm: 1,
+            month: 1,
             yyyy: 1,
             suggestedStateProvince: 1,
             suggestedCounty: 1,
